--- a/public/15-step-3.html
+++ b/public/15-step-3.html
@@ -37,7 +37,9 @@
 									<div><img src="img/@2x/logo.png" alt=""/></div>
 									<div class="logo__text">
 										<div class="logo__title">Комплексные системы
-										</div>Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
+										</div>
+										<div class="logo__text-inner"> Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
+										</div>
 									</div></a>
 							</div>
 							<div class="col-auto order-last">
@@ -282,12 +284,14 @@
 								<div><img src="img/@2x/logo.png" alt=""/></div>
 								<div class="logo__text">
 									<div class="logo__title">Комплексные системы
-									</div>Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
+									</div>
+									<div class="logo__text-inner"> Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
+									</div>
 								</div></a>
 						</div>
 						<div class="col-auto order-sm-last">
 							<div class="contact-block">
-								<div class="d-lg-block d-none"><a class="contact-block__tel" href="tel:+7(3519)22-00-00">+7 (3519) 22-00-00</a>
+								<div><a class="contact-block__tel" href="tel:+7(3519)22-00-00">+7 (3519) 22-00-00</a>
 								</div><a class="contact-block__link link-modal" href="#modal-call">Заказать звонок</a>
 								<div class="messanger-block"><a class="messanger-block__item messanger-block__item--viber" href="#">
 									<svg class="icon icon-viber ">
@@ -295,15 +299,7 @@
 									</svg></a><a class="messanger-block__item messanger-block__item--whatsapp" href="#">
 									<svg class="icon icon-whatsapp ">
 										<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-									</svg></a><a class="messanger-block__item messanger-block__item--tel d-lg-none" href="tel:+7(3519)22-00-00">
-									<svg class="icon icon-tel ">
-										<use xlink:href="img/svg/sprite.svg#tel"></use>
 									</svg></a>
-									<button class="messanger-block__item messanger-block__item--search d-lg-none" type="button">
-										<svg class="icon icon-search ">
-											<use xlink:href="img/svg/sprite.svg#search"></use>
-										</svg>
-									</button>
 								</div>
 							</div>
 						</div>
