--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,9 @@
 									<div><img src="img/@2x/logo.png" alt=""/></div>
 									<div class="logo__text">
 										<div class="logo__title">Комплексные системы
-										</div>Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
+										</div>
+										<div class="logo__text-inner"> Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
+										</div>
 									</div></a>
 							</div>
 							<div class="col-auto order-last">
@@ -382,6 +384,14 @@
 																	<label class="qwiz-radio"><input class="qwiz-radio__input" type="radio" name="qwiz-price"/><span class="qwiz-radio__lab"></span><span class="qwiz-radio__title">От 5.000 до 10.000 Р</span>
 																	</label>
 																</div>
+																<div class="col-sm-6">
+																	<label class="qwiz-radio"><input class="qwiz-radio__input" type="radio" name="qwiz-price"/><span class="qwiz-radio__lab"></span><span class="qwiz-radio__title">От 10.000 до 20.000 Р</span>
+																	</label>
+																</div>
+																<div class="col-sm-6">
+																	<label class="qwiz-radio"><input class="qwiz-radio__input" type="radio" name="qwiz-price"/><span class="qwiz-radio__lab"></span><span class="qwiz-radio__title">Свыше 20.000 Р</span>
+																	</label>
+																</div>
 													</div>
 												</div>
 												<div class="qwiz-item__footer">
@@ -716,7 +726,7 @@
 			</section>
 			<!-- end s-steps-->
 			<!-- start s-form-->
-			<div class="s-form section block-with-lazy section-border" id="s-form">
+			<div class="s-form s-form--main section block-with-lazy section-border" id="s-form">
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-7 col-lg-6 align-self-end order-lg-first order-last">
@@ -837,12 +847,14 @@
 								<div><img src="img/@2x/logo.png" alt=""/></div>
 								<div class="logo__text">
 									<div class="logo__title">Комплексные системы
-									</div>Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
+									</div>
+									<div class="logo__text-inner"> Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
+									</div>
 								</div></a>
 						</div>
 						<div class="col-auto order-sm-last">
 							<div class="contact-block">
-								<div class="d-lg-block d-none"><a class="contact-block__tel" href="tel:+7(3519)22-00-00">+7 (3519) 22-00-00</a>
+								<div><a class="contact-block__tel" href="tel:+7(3519)22-00-00">+7 (3519) 22-00-00</a>
 								</div><a class="contact-block__link link-modal" href="#modal-call">Заказать звонок</a>
 								<div class="messanger-block"><a class="messanger-block__item messanger-block__item--viber" href="#">
 									<svg class="icon icon-viber ">
@@ -850,15 +862,7 @@
 									</svg></a><a class="messanger-block__item messanger-block__item--whatsapp" href="#">
 									<svg class="icon icon-whatsapp ">
 										<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-									</svg></a><a class="messanger-block__item messanger-block__item--tel d-lg-none" href="tel:+7(3519)22-00-00">
-									<svg class="icon icon-tel ">
-										<use xlink:href="img/svg/sprite.svg#tel"></use>
 									</svg></a>
-									<button class="messanger-block__item messanger-block__item--search d-lg-none" type="button">
-										<svg class="icon icon-search ">
-											<use xlink:href="img/svg/sprite.svg#search"></use>
-										</svg>
-									</button>
 								</div>
 							</div>
 						</div>
