--- a/public/09-prod.html
+++ b/public/09-prod.html
@@ -287,40 +287,42 @@
 							</div>
 						</div>
 						<div class="col-lg-4">
-							<div class="s-prod-head__availability" style="color: #8ac176;">В наличии
-							</div>
-							<div class="s-prod-head-sidebar">
-								<div class="s-prod-head-sidebar__price">2000 Р*
+							<div class="s-prod-head__sidebar-wrap">
+								<div class="s-prod-head__availability" style="color: #8ac176;">В наличии
 								</div>
-								<ul>
-									<li>
-										<svg class="icon icon-shipped ">
-											<use xlink:href="img/svg/sprite.svg#shipped"></use>
-										</svg><strong>Доставка </strong>по&nbsp;Магнитогорску в&nbsp;день оплаты
-									</li>
-									<li>
-										<svg class="icon icon-credit-card ">
-											<use xlink:href="img/svg/sprite.svg#credit-card"></use>
-										</svg><strong>Оплата</strong>Безналично: банковской картой, по&nbsp;выставленному счету.При покупке со&nbsp;склада&nbsp;&mdash; наличными или безналично.
-									</li>
-									<li>
-										<svg class="icon icon-guarantee ">
-											<use xlink:href="img/svg/sprite.svg#guarantee"></use>
-										</svg><strong>Гарантия</strong>На&nbsp;корпус сейфы 5&nbsp;лет, на&nbsp;замки 1&nbsp;год.
-									</li>
-									<li>
-										<svg class="icon icon-vault ">
-											<use xlink:href="img/svg/sprite.svg#vault"></use>
-										</svg><strong>Помощь с установкой</strong>Если нужно, поможем установить  или встроить 
-									</li>
-								</ul>
-								<button class="s-prod-head-sidebar__btn" type="button">
-									<svg class="icon icon-cart ">
-										<use xlink:href="img/svg/sprite.svg#cart"></use>
-									</svg>В корзину
-								</button>
-							</div>
-							<div class="s-prod-head__footer-text">*При оформлении заказа  уточняйте&nbsp;цену по&nbsp;т: <a href="tel:8(3519)22-00-22">8 (3519) 22-00-22</a>
+								<div class="s-prod-head-sidebar">
+									<div class="s-prod-head-sidebar__price">2000 Р*
+									</div>
+									<ul>
+										<li>
+											<svg class="icon icon-shipped ">
+												<use xlink:href="img/svg/sprite.svg#shipped"></use>
+											</svg><strong>Доставка </strong>по&nbsp;Магнитогорску в&nbsp;день оплаты
+										</li>
+										<li>
+											<svg class="icon icon-credit-card ">
+												<use xlink:href="img/svg/sprite.svg#credit-card"></use>
+											</svg><strong>Оплата</strong>Безналично: банковской картой, по&nbsp;выставленному счету.При покупке со&nbsp;склада&nbsp;&mdash; наличными или безналично.
+										</li>
+										<li>
+											<svg class="icon icon-guarantee ">
+												<use xlink:href="img/svg/sprite.svg#guarantee"></use>
+											</svg><strong>Гарантия</strong>На&nbsp;корпус сейфы 5&nbsp;лет, на&nbsp;замки 1&nbsp;год.
+										</li>
+										<li>
+											<svg class="icon icon-vault ">
+												<use xlink:href="img/svg/sprite.svg#vault"></use>
+											</svg><strong>Помощь с установкой</strong>Если нужно, поможем установить  или встроить 
+										</li>
+									</ul>
+									<button class="s-prod-head-sidebar__btn" type="button">
+										<svg class="icon icon-cart ">
+											<use xlink:href="img/svg/sprite.svg#cart"></use>
+										</svg>В корзину
+									</button>
+								</div>
+								<div class="s-prod-head__footer-text">*При оформлении заказа  уточняйте&nbsp;цену по&nbsp;т: <a href="tel:8(3519)22-00-22">8 (3519) 22-00-22</a>
+								</div>
 							</div>
 						</div>
 					</div>
