--- a/public/05-shipping.html
+++ b/public/05-shipping.html
@@ -64,12 +64,12 @@
 										<svg class="icon icon-whatsapp ">
 											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
 										</svg></a><a class="messanger-block__item messanger-block__item--tel d-lg-none" href="tel:+7(3519)22-00-00">
-										<svg class="icon icon-tel ">
-											<use xlink:href="img/svg/sprite.svg#tel"></use>
+										<svg class="icon icon-telephone2 ">
+											<use xlink:href="img/svg/sprite.svg#telephone2"></use>
 										</svg></a>
 										<button class="messanger-block__item messanger-block__item--search d-lg-none" type="button">
-											<svg class="icon icon-search ">
-												<use xlink:href="img/svg/sprite.svg#search"></use>
+											<svg class="icon icon-loupe2 ">
+												<use xlink:href="img/svg/sprite.svg#loupe2"></use>
 											</svg>
 										</button>
 									</div>
@@ -346,7 +346,7 @@
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<div class="row">
-						<div class="logo col-lg-5 col"><a href="#">
+						<div class="logo col-lg-5 col-sm"><a href="#">
 								<div><img src="img/@2x/logo.png" alt=""/></div>
 								<div class="logo__text">
 									<div class="logo__title">Комплексные системы
