--- a/public/09-prod.html
+++ b/public/09-prod.html
@@ -172,9 +172,9 @@
 										<div class="menu-top">
 											<ul>
 												<li><a class="scroll-link" href="#s-qwiz"> 
-														<svg class="icon icon-safety-box ">
-															<use xlink:href="img/svg/sprite.svg#safety-box"></use>
-														</svg>Подобрать сейф</a></li>
+														<div class="menu-icon">
+															<div class="menu-image-hover-wrapper"><img src="img/svg/safety-box.svg" alt=""/><img src="img/svg/safety-box-blue.svg" alt=""/></div>
+														</div>Подобрать сейф</a></li>
 												<li><a href="#">Доставка и оплата</a></li>
 												<li><a href="#">Контакты</a></li>
 											</ul>
