--- a/public/17-search.html
+++ b/public/17-search.html
@@ -478,7 +478,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm"><a class="footer__btn link-modal" href="#modal-call-other">
+						<div class="col-sm"><a class="footer__btn" href="#">
 							<svg class="icon icon-safety-box ">
 								<use xlink:href="img/svg/sprite.svg#safety-box"></use>
 							</svg>Подобрать сейф</a>
@@ -611,10 +611,13 @@
 						</div>
 					</div>
 					<div class="form-wrap__input-wrapper">
-						<label class="text-center">Напишите комментарии, если хотите</label>
-						<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" placeholder="Текст сообщения" name="textarea"></textarea>
+						<div class="form-wrap__comment form-wrap__comment--js text-center">Напишите комментарии, если хотите
 						</div>
-						<!-- +e.input-wrap-->
+						<div class="form-wrap__toggle-block form-wrap__toggle-block--js">
+							<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" placeholder="Текст сообщения" name="textarea"></textarea>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
 					</div>
 					<button class="form-wrap__btn" type="submit">Заказать звонок
 					</button>
